css/styles.css
:root {
    --text-light: #f2f2f2;
    --text-dark: #3E6156;
    --accent: #1fcdb8;
    --gradient: linear-gradient(to right, #7EE4C6, #43F6A8);
}

/**** Reset styles given by the browser ***/
* {
    margin: 0;
    padding: 0;
    font-family: Arial, sans-serif;
    text-decoration: none;
    color: var(--text-dark);
    list-style: none;
    box-sizing: border-box;
}

body, html {
    width: 100%;
    height: 100%;
    background-color: var(--text-light);
}

/**** Basic style helper ****/

.gradient {
    background-image: var(--gradient);
}

.border {
    border: var(--text-dark) 1px solid;
}

.border-light {
    border: 1px solid var(--text-light) ;
}

.border.no-right, .border-light.no-right   { border-right:  none; }
.border.no-left,  .border-light.no-left    { border-left:   none; }
.border.no-top,   .border-light.no-top     { border-top:    none; }
.border.no-bottom, .border-light.no-bottom { border-bottom: none; }

.clickable {
    cursor: pointer;
}

.to-blue:hover {
    color: var(--accent) !important;
    transition-duration: 0.7s;
}

h1.sub-title {
    font-size: 2.5em;
    margin-bottom: 10px;
}

h1.display-title, h2.display-title {
    letter-spacing: 7px;
    font-size: 3.5em;
}

h2.display-title {
    font-size: 1.7em;
}

.flex-between {
    display: flex;
    justify-content: space-between;
}

.btn-blue {
    padding: 3px 15px;
    border: none;
    border-radius: 7px;
    color: var(--text-light);
    font-size: 1.2rem;
    background-image: var(--gradient);
}

/**** Modal Styles ****/
#modal {
    display: none;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0, 0, 0, 0.7);
    overflow: hidden;
}

#modal .body {
    background-color: var(--text-light);
    width: 100%;
    height: 75%;
    position: fixed;
    bottom: 15%;
    overflow-y: scroll;
}

#modal header {
    text-transform: capitalize;
    display: flex;
    justify-content: space-between;
    padding: 15px;
    border-bottom: 1px var(--text-dark) solid;
    background-image: var(--gradient);
}

#modal header * {
    color: var(--text-light);
}

#modal-close {
    cursor: pointer;
}

#modal-art {
    width: 100%;
    height: auto;
}

/**** Container Styles ****/

.container {
    padding: 5px 25px 0;
}

/**** Navbar Styles ****/

#nav-selected {
    border-right: 5px var(--accent) solid;
    padding-right: 2px;
}

.hamburger {
    float: right;
}

.hamburger div {
    width: 35px;
    height: 5px;
    background-color: var(--text-dark);
    margin-bottom: 3px;
}

#hamburger-light div {
    background-color: var(--text-light);
}

.nav-right {
    position: absolute;
    top: calc(8px * 3 + 5px);
    left: 0;
    right: 25px;
    display: none;
}

.nav-right a {
    display: block;
    width: 100%;
    text-align: right;
    padding-right: 7px;
}

/**** Cart Styles ****/
.dropdown-content {
    display: none;
    position: absolute;
    width: 300px;
    text-align: left;
}

.spacer { height: 10px; }

.dropdown:hover .dropdown-content {
    display: block;
}

.dropdown-list {
    padding: 10px 0;
    background-color: var(--text-light);
}

.dropdown-list * {
    color: var(--text-dark) !important;
}

.dropdown-list .cart-item-shirt, .cart-item-remove {
    display: flex;
    padding: 0 5px;
}

.cart-item-remove * {
    font-size: 1em;
    margin-top: 0.5em;
}

.cart-item-remove button {
    padding: 0 3px !important;
    background-color: #F55C5C;
}

.dropdown-list .cart-item-shirt img {
    width: 2em;
    height: 2em;
}

.cart-item-img {
    width: 75%;
}

/**** Index Page Styles ****/

.container.background-img {
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.55);
}

.container.container.background-img * {
    color: var(--text-light);
}

body.background-img{
    color: var(--text-light);
    background-image: url('../assets/indexcover.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: right;
}

.title {
    text-align: center;
    position: absolute;
    bottom: 49%;
    width: 80%;
}

.title-links {
    width: 80%;
    margin: 0 auto;
}

.title a {
    display: block;
    margin: 10px;
}

.social-media {
    position: absolute;
    bottom: 5%;
    right: 5%;
    font-size: 1.5em;
    color: var(--text-light);
}

.social-media a {
    margin-right: 20px;
}

/**** Tours Page Styles ****/
.venues > div {
    padding: 10px;
    text-transform: capitalize;
}

.venues > div > p {
    text-align: center;
    vertical-align: middle;
    font-size: 0.8em;
    line-height: calc(0.8em + 20px);
}

.venues > div:hover {
    background-color: #ddd;
}

#map {
    width: 100%;
    height: 40vh;
    margin-bottom: 10px;
}

/**** Albums Styles ****/

.new-album-mobile h1, .new-album-mobile h2 {
    letter-spacing: unset !important;
}

.new-album-mobile img {
    width: 90%;
    height: auto;
}

.new-album-mobile {
    text-align: center;
}

.new-album {
    display: none;
}

#custom-album {
    width: 100%;
    height: auto;
}

.albums > div {
    height: 50%;
    overflow-y: hidden;
}

.albums-list {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    height: inherit;
}

.albums-list img {
    width: 100%;
    height: 50%;
    flex: 0 49%;
}

.songs-list > div {
    padding: 15px;
    text-transform: capitalize;
}

.song-info .add-to-cart {
    padding: 2px 7px;
    margin-right: 5px;
    border-radius: 14px;
    border: none;
    background-image: var(--gradient);
    color: var(--text-light);
}

/**** Store Styles ****/
.custom-shirt canvas {
    width: 100%;
}

#clear-text {
    margin-left: -5px;
    background-color: #F55C5C;
    width: 10%;
}

#clear-text, #shirt-text {
    padding: 5px;
}

#clear-text i {
    color: var(--text-light);
}

#shirt-text {
    width: 90%;
}

.shirt-designs {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.shirt-designs img {
    width: 100%;
    flex: 0 49%;
    margin-bottom: 10px;
}

.merch-container img {
    width: 100%;
    height: auto;
}

.shirt-details {
    display: flex;
    justify-content: space-between;
    margin-bottom: 10px;
}

.designs {
    display: none;
}

/**** Updated styles for destop devices ****/
@media screen and (min-width: 900px) {
    /**** Updated helper function for desktop devices ****/
    h1.sub-title {
        font-size: 3.5em;
    }

    h1.display-title, h2.display-title {
        font-size: 7.5em;
    }

    h2.display-title {
        font-size: 3.5em;
    }

    /**** Desktop Navbar ****/
    .hamburger {
        display: none;
    }

    nav {
        padding: 1.5% 0 0;
        position: sticky;
        display: flex;
    }

    nav .nav-left {
        width: 10%;
    }

    nav .nav-right {
        font-size: 1.3em;
        width: 90%;
        text-align: right;
        position: unset;
        display: block;
    }

    nav .nav-right a {
        margin: 0.4em 1em;
        width: auto;
        display: inline;
        text-align: left;
    }

    nav .nav-right a:last-of-type {
        margin-right: 0;
    }

    #nav-selected {
        border-bottom: 5px solid var(--accent);
        border-right: none;
    }

    /**** Index Page ****/
    body.background-img {
        background-position: center;
    }

    .title {
        width: auto;
        left: 7%;
    }

    .title-links {
        width: 90%;
        display: flex;
        justify-content: space-between;
        margin: 0;
    }

    .title a {
        width: 49%;
        padding: 7px 0;
    }

    /**** Maps Page ****/
    .tours-container {
        display: flex;
        justify-content: space-between;
    }

    #map {
        width: 65%;
        height: 65vh;
    }

    .tour-dates {
        width: 30%;
    }

    /**** Albums Page ****/
    .new-album-mobile {
        display: none;
    }

    .new-album {
        display: flex;
        max-height: 90vh;
    }

    .new-album img {
        width: 48%;
        height: 48%;
    }

    .new-album div {
        padding-top: 15%;
        padding-left: 25px;
    }

    .albums-list {
        width: 49%;
    }

    .albums > div {
        display: flex;
        justify-content: space-between;
        margin-bottom: 10px;
    }

    #custom-album {
        width: 49%;
        height: 49%;
    }

    #modal .body {
        width: 55%;
        max-width: 600px;
        left: 25%;
        height: unset;
        bottom: unset;
        overflow-y: hidden;
    }

    #modal-art {
        width: 45%;
        height: 45%;
    }

    .modal-main {
        display: flex;
    }

    .songs-list {
        width: 55% !important;
        height: auto;
        /**** This value is the largest the image next to the list will be at 45% width ****/
        max-height: 270px;
        overflow-y: scroll;
        text-transform: capitalize;
    }

    /**** Store Page ****/
    .flex-container {
        display: flex;
        justify-content: space-between;
    }

    .custom-container {
        width: calc(70% - 10px);
        display: inline-block;
    }

    .custom-shirt-input {
        margin-bottom: 5%;
    }

    .custom-shirt canvas {
        width: 30%;
    }

    .shirt-designs img {
        flex: 0 30%;
    }

    .merch-container {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
    }

    .merch-container > div {
        width: 100%;
        flex: 0 30%;
    }
}

/**** Updated styles for ultra wide displays ****/
@media screen and (min-width: 1940px) {
    .container {
        width: 1920px;
        margin: 0 auto;
    }
}

